Completando CRUD para endpoint usuarios
