# src/routes/usuario.route.js
@@ -7,5 +7,9 @@ const Usuariocontroller = require('../controllers/Usuariocontroller')
 const usuarioRoutes = new Router()
 
 usuarioRoutes.post('/', Usuariocontroller.cadastrarUsuario)
+usuarioRoutes.get('/', Usuariocontroller.listarUsuarios)
+usuarioRoutes.get('/:id', Usuariocontroller.listarUsuarioPorId)
+usuarioRoutes.put('/:id', auth, Usuariocontroller.atualizarUsuario)
+usuarioRoutes.delete('/:id', Usuariocontroller.deletarUsuario)
 
 module.exports = usuarioRoutes
